--- a/dev/scss/sections/_search.scss
+++ b/dev/scss/sections/_search.scss
@@ -11,6 +11,9 @@
         border-radius: 0;
         font-weight: 400;
                     font-size: rem-calc(16);
+        @include md{
+            font-size: rem-calc(30);
+        }
 
     }
     #search-button {
