--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -7,6 +7,11 @@
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". header .";
 
+      
+    @include xl {
+        grid-template-columns: auto 1440px auto;
+    }
+
     >div{
         grid-area: header;
     }
