--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -8,7 +8,7 @@
     grid-template-areas: ". header .";
 
       
-    @include xl {
+    @include xxl {
         grid-template-columns: auto 1440px auto;
     }
 
