sort of working

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -374,6 +374,14 @@ template {
   grid-area: header;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+}
+ul li {
+  list-style: none;
+}
+
 .show-for-xl {
   display: none;
 }
@@ -449,6 +457,90 @@ textarea {
 /* =============
     Navigation
 ============= */
+a:link, a:visited {
+  text-decoration: none;
+  transition: 0.25;
+}
+
+nav {
+  display: none;
+  background-color: var(--navy);
+  height: 100vh;
+  padding: 16px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100vw;
+  box-sizing: border-box;
+}
+@media (min-width: 1024px) {
+  nav {
+    background-color: var(--navy);
+    display: block;
+    height: 100%;
+    padding: 0;
+    position: relative;
+    width: 100%;
+  }
+}
+nav aside {
+  display: flex;
+  justify-content: flex-end;
+}
+@media (min-width: 1024px) {
+  nav aside {
+    display: none;
+  }
+}
+nav aside button {
+  background-color: transparent;
+  border: none;
+  color: var(--sky-blue);
+}
+nav section {
+  display: flex;
+  justify-content: center;
+  margin-top: 10vh;
+}
+@media (min-width: 1024px) {
+  nav section {
+    display: block;
+    margin-top: 0;
+    height: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  nav section ul {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  nav section ul li {
+    margin-left: 16px;
+  }
+}
+nav section ul li a:link, nav section ul li a:visited {
+  text-decoration: none;
+  transition: 0.25s;
+  color: var(--sky-blue);
+  padding: 16px;
+  display: inline-block;
+  font-size: 1.875rem;
+}
+nav section ul li a:link:hover, nav section ul li a:link:active, nav section ul li a:visited:hover, nav section ul li a:visited:active {
+  color: var(--ocean-blue);
+}
+@media (min-width: 1024px) {
+  nav section ul li a:link, nav section ul li a:visited {
+    font-size: 1.375rem;
+    padding: 0;
+    font-weight: 300;
+  }
+}
+
 /* =============
     Header
 ============= */
@@ -456,9 +548,31 @@ header {
   background-color: var(--navy);
   font-size: 1.25rem;
 }
-
-img {
+header > div {
+  display: grid;
+  grid-template-columns: 50% auto;
+}
+header > div #logo {
+  display: flex;
+}
+header > div #logo img {
   padding: 16px 0px;
+}
+header > div #burger-area {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+@media (min-width: 1024px) {
+  header > div #burger-area {
+    display: none;
+  }
+}
+header > div #burger-area button {
+  border: none;
+  background-color: transparent;
+  color: white;
+  padding: 16px;
 }
 
 /* =============
@@ -467,12 +581,6 @@ img {
 footer {
   background-color: var(--navy);
   padding: 16px 0 16px 0;
-  display: grid;
-}
-@media (min-width: 1200px) {
-  footer {
-    grid-template-columns: auto 1440px auto;
-  }
 }
 footer > div {
   display: grid;
