--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -4,6 +4,10 @@
 header {
     background-color: var(--navy);
     font-size: rem-calc(20);
+    position: fixed;
+    left: 0;
+    top:0;
+    width: 100%;
 
     >div {
 
