--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,3 +1,11 @@
 /* =============
     Typography
 ============= */
+
+body{
+    font-family: 'Barlow', sans-serif;
+}
+
+h1,h2,h3,h4,h5{
+    font-family: 'Barlow Semi Condensed', sans-serif;
+}
