--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -10,6 +10,13 @@ html {
 /* =============
     Variables
 ============= */
+:root {
+  --bark-brown: #4A3730;
+  --beige: #E7E1DF;
+  --blush-pink: #E9D3Da;
+  --forest-green: #254D46;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -352,6 +359,39 @@ template {
 /* =============
     Base
 ============= */
+.show-for-md {
+  display: none;
+}
+@media (min-width: 768px) {
+  .show-for-md {
+    display: block;
+  }
+}
+
+.show-for-lg {
+  display: none;
+}
+@media (min-width: 1024px) {
+  .show-for-lg {
+    display: block;
+  }
+}
+
+.show-for-xl {
+  display: none;
+}
+@media (min-width: 1200px) {
+  .show-for-xl {
+    display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .hide-for-md {
+    display: none;
+  }
+}
+
 /* =============
     Typography
 ============= */
