--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -3,3 +3,32 @@
 ============= */
 
 
+.show-for-md{
+    display: none;
+
+    @include md{
+        display: block;
+    }
+}
+
+.show-for-lg{
+    display: none;
+
+    @include lg{
+        display: block;
+    }
+}
+
+.show-for-xl{
+    display: none;
+
+    @include xl{
+        display: block;
+    }
+}
+
+.hide-for-md{
+    @include md{
+        display: none;
+    }
+}
