--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -19,3 +19,11 @@ $screen-xl-min: 1200px;
 // Colors
 $white: #fff;
 $black: #000;
+
+:root{
+    --bark-brown: #4A3730;
+    --beige: #E7E1DF;
+    --blush-pink: #E9D3Da;
+    --forest-green: #254D46;
+    
+}
