--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -15,6 +15,8 @@ $screen-lg-min: 1024px;
 // Large desktops
 $screen-xl-min: 1200px;
 
+$screen-xxl-min: 1440px;
+
 
 // Colors
 $white: #fff;
@@ -25,5 +27,5 @@ $black: #000;
     --beige: #E7E1DF;
     --blush-pink: #E9D3Da;
     --forest-green: #254D46;
-    
+    --dark-beige: #D1C9C7;
 }
