--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -416,6 +416,13 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: "Barlow Semi Condensed", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 /* =============
@@ -453,18 +460,43 @@ header {
 /* =============
     Footer
 ============= */
+footer {
+  background-color: var(--dark-beige);
+}
+
 .hero-img {
   width: 100%;
+}
+
+#hero-text {
+  padding: 24px 0 24px 0;
 }
 
 #homepage-cards {
   background-color: var(--blush-pink);
 }
 
-.cards ul {
+.cards {
   padding: 0;
   margin: 0;
 }
-.cards ul li {
+.cards li {
   list-style: none;
+  background-color: white;
+  margin: 40px 0 40px 0;
+  padding: 16px 0 16px 0;
+}
+.cards li .card-img {
+  width: 100%;
+}
+
+#flora-cards {
+  background-color: var(--blush-pink);
+}
+
+#about-us {
+  padding: 24px 0 24px 0;
+}
+#about-us aside img {
+  width: 50%;
 }
