--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -8,4 +8,11 @@ body{
 
 h1,h2,h3,h4,h5{
     font-family: 'Barlow Semi Condensed', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+p{
+    margin: 0;
+    padding: 0;
 }
