--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -463,6 +463,39 @@ header {
 footer {
   background-color: var(--dark-beige);
 }
+footer > div {
+  padding: 24px 0 24px 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "f1 f6" "f2 f3" "f4 f5";
+}
+@media (min-width: 768px) {
+  footer > div {
+    grid-template-areas: "f1 f6 f2" "f4 f5 f3";
+  }
+}
+footer > div #phone {
+  grid-area: f1;
+  display: flex;
+  align-items: center;
+}
+footer > div #mail {
+  grid-area: f6;
+  display: flex;
+  align-items: center;
+}
+footer > div #socials {
+  grid-area: f2;
+}
+footer > div #priv-policy {
+  grid-area: f3;
+}
+footer > div #llc {
+  grid-area: f4;
+}
+footer > div #rights {
+  grid-area: f5;
+}
 
 .hero-img {
   width: 100%;
@@ -488,6 +521,19 @@ footer {
 }
 .cards li .card-img {
   width: 100%;
+  height: 320px;
+  object-fit: cover;
+  padding-bottom: 16px;
+}
+.cards li h1 {
+  text-align: center;
+  padding-bottom: 16px;
+}
+.cards li .card-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 16px;
 }
 
 #flora-cards {
