--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -1,6 +1,57 @@
 /* =============
     Footer
 ============= */
-footer{
+footer {
     background-color: var(--dark-beige);
+    >div{
+
+   
+    
+    padding: 24px 0 24px 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+    "f1 f6"
+    "f2 f3"
+    "f4 f5";
+
+    @include md{
+        grid-template-areas: 
+        "f1 f6 f2"
+        "f4 f5 f3";
+    }
+
+        
+      
+        #phone {
+            grid-area: f1;
+            display: flex;
+            align-items: center;
+        }
+
+        #mail {
+            grid-area: f6;
+            display: flex;
+            align-items: center;
+
+        }
+
+
+    #socials{
+        grid-area: f2;
+
+    }
+
+    #priv-policy{
+grid-area: f3;
+    }
+
+    #llc{
+grid-area: f4;
+    }
+
+    #rights{
+grid-area: f5;
+    }
+}
 }
