--- a/dev/scss/sections/_cards.scss
+++ b/dev/scss/sections/_cards.scss
@@ -1,14 +1,10 @@
+
+
 #homepage-cards {
-    background-color: var(--blush-pink);
-
-    
-}
-
-.cards {
 
     padding: 0;
     margin: 0;
-    
+    background-color: var(--blush-pink);
 
     li {
         
@@ -17,7 +13,7 @@
         margin: 40px 0 40px 0;
         padding: 16px 0 16px 0;
 
-        .card-img{
+        .home-card-img{
             width: 100%;
             height: 320px;
             object-fit: cover;
@@ -29,7 +25,7 @@
             padding-bottom: 16px;
         }
 
-        .card-button{
+        .home-card-button{
             display: flex;
             justify-content: center;
             align-items: center;
@@ -41,6 +37,38 @@
 }
 
 #flora-cards{
+    padding: 0;
+    margin: 0;
     background-color: var(--blush-pink);
+
+    li {
+        
+        list-style: none;
+        background-color: white;
+        margin: 40px 0 40px 0;
+        padding: 16px 0 16px 0;
+
+        .flora-card-img{
+            width: 100%;
+            height: 320px;
+            object-fit: cover;
+            padding-bottom: 16px;
+        }
+
+        h1{
+            text-align: center;
+            padding-bottom: 16px;
+        }
+
+        .flora-card-button{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 16px;
+        }
+
+    }
 }
+
+
 
