--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -505,16 +505,32 @@ footer > div #rights {
   padding: 24px 0 24px 0;
 }
 
+#homepage-card-container {
+  background-color: var(--blush-pink);
+}
+
 #homepage-cards {
   padding: 0;
   margin: 0;
   background-color: var(--blush-pink);
+}
+@media (min-width: 768px) {
+  #homepage-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "hc1, hc2" "hc3, hc4";
+  }
 }
 #homepage-cards li {
   list-style: none;
   background-color: white;
   margin: 40px 0 40px 0;
   padding: 16px 0 16px 0;
+}
+@media (min-width: 768px) {
+  #homepage-cards li {
+    margin: 16px 8px;
+  }
 }
 #homepage-cards li .home-card-img {
   width: 100%;
