--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -586,8 +586,25 @@ footer > div #rights {
   text-align: center;
   margin-bottom: 16px;
 }
+#about-us p {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+#about-us li {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 #about-us aside img {
   width: 100%;
+  height: 160px;
+  object-fit: cover;
+}
+@media (min-width: 768px) {
+  #about-us aside img {
+    height: 280px;
+  }
 }
 #about-us #about-us-grid {
   gap: 16px;
@@ -595,8 +612,14 @@ footer > div #rights {
   grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "a1 a2" "a3 a3" "a4 a5" "a6 a6";
 }
+@media (min-width: 768px) {
+  #about-us #about-us-grid {
+    grid-template-areas: "a1 a2" "a3 a2" "a4 a7" "a4 a7";
+  }
+}
 #about-us #about-us-grid #au1 {
   grid-area: a1;
+  padding-top: 24px;
 }
 #about-us #about-us-grid #au2 {
   grid-area: a2;
@@ -612,4 +635,7 @@ footer > div #rights {
 }
 #about-us #about-us-grid #au6 {
   grid-area: a6;
+}
+#about-us #about-us-grid #au7 {
+  grid-area: a7;
 }
