--- a/dev/scss/sections/_about-us.scss
+++ b/dev/scss/sections/_about-us.scss
@@ -7,9 +7,25 @@ h1{
     text-align: center;
     margin-bottom: 16px;
 }
+p{
+    font-weight: 400;
+    font-size: rem-calc(16);
+    line-height: rem-calc(24);
+}
+li{
+    font-weight: 400;
+    font-size: rem-calc(16);
+    line-height: rem-calc(24); 
+}
+
     aside{
         img{
             width: 100%;
+            height: 160px;
+            object-fit: cover;
+            @include md{
+                height: 280px;
+            }
         }
     }
     #about-us-grid{
@@ -23,8 +39,18 @@ h1{
             "a6 a6"
         ;
 
+        @include md{
+            grid-template-areas: 
+                "a1 a2"
+                "a3 a2"
+                "a4 a7"
+                "a4 a7"
+            ;
+        }
+
         #au1{
             grid-area: a1;
+            padding-top: 24px;
         }
         #au2{
             grid-area: a2;
@@ -42,7 +68,7 @@ h1{
             grid-area: a6;
         }
         #au7{
-            
+            grid-area: a7;
         }
 
     }
